--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,9 @@ img {
 .login {
   position: relative;
   height: 100vh;
-  display: grid;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
 }
 
@@ -54,6 +56,24 @@ img {
   height: 100%;
   object-fit: cover;
   object-position: center;
+}
+
+/* Tags */
+.tags {
+  display: flex;
+  gap: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+
+.tags__item {
+  background-color: hsla(0, 0%, 100%, 0.2);
+  color: var(--white-color);
+  padding: 1rem;
+  border-radius: 1rem;
+}
+
+.tags__item i {
+  margin-right: 0.5rem;
 }
 
 .login__form {
@@ -168,6 +188,20 @@ img {
   text-decoration: underline;
 }
 
+.github {
+  position: sticky;
+  margin-top: 1.5rem;
+}
+
+.github a i {
+  font-size: 3rem;
+  color: var(--white-color);
+}
+
+.github a:hover i {
+  color: hsla(0, 0%, 100%, 0.8);
+  transform: scale(2);
+}
 /*=============== BREAKPOINTS ===============*/
 /* For medium devices */
 @media screen and (min-width: 576px) {
